[gd_scene load_steps=2 format=3 uid="uid://b7r3h2k8v5m9p"]

[ext_resource type="Script" path="res://scripts/test/input_manager_test.gd" id="1_test"]

[node name="InputManagerTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_test")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "InputManager Test"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ControllerType" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Controller Type: KEYBOARD"

[node name="GamepadConnected" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Gamepad Connected: No"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="LastInput" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Last Input: None"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Instructions" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Press any gamepad button or key to test input detection
Try connecting/disconnecting a gamepad"
horizontal_alignment = 1

[node name="ButtonPrompts" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AttackButton" type="Label" parent="VBoxContainer/ButtonPrompts"]
layout_mode = 2
text = "Attack: Space"

[node name="ConfirmButton" type="Label" parent="VBoxContainer/ButtonPrompts"]
layout_mode = 2
text = "Confirm: Enter"

[node name="CancelButton" type="Label" parent="VBoxContainer/ButtonPrompts"]
layout_mode = 2
text = "Cancel: Escape"
